--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
 
 		function updateText()
 		{
-			el.innerHTML = el.innerHTML+words[word_counter][character_counter++];
+			// not fixed yet
+			if(words[word_counter][character_counter] == " ") {
+				el.innerHTML = el.innerHTML+"&nbsp;";
+				character_counter++;
+			} else {
+				el.innerHTML = el.innerHTML+words[word_counter][character_counter++];
+			}
 
-			if(character_counter == words[word_counter].length)
+			if(character_counter > words[word_counter].length)
 			{
 				word_counter++; 	//choose a different word
 				character_counter = 0;	//start over with the first character of the word
@@ -46,7 +52,7 @@
 			}
 		}
 
-		setInterval(updateText,300);
+		setInterval(updateText,600);
 
 	</script>
 
